; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/xps/extr_xps-path.c_xps_clip.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/xps/extr_xps-path.c_xps_clip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@fz_infinite_rect = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xps_clip(i32* %0, %struct.TYPE_5__* %1, i32 %2, i32* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_5__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %13, align 8
  store i32 0, i32* %15, align 4
  %19 = load i8*, i8** %11, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %26

21:                                               ; preds = %6
  %22 = load i32*, i32** %7, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %24 = load i8*, i8** %11, align 8
  %25 = call i32* @xps_parse_abbreviated_geometry(i32* %22, %struct.TYPE_5__* %23, i8* %24, i32* %15)
  store i32* %25, i32** %14, align 8
  br label %39

26:                                               ; preds = %6
  %27 = load i32*, i32** %12, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %35

29:                                               ; preds = %26
  %30 = load i32*, i32** %7, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = load i32*, i32** %12, align 8
  %34 = call i32* @xps_parse_path_geometry(i32* %30, %struct.TYPE_5__* %31, i32* %32, i32* %33, i32 0, i32* %15)
  store i32* %34, i32** %14, align 8
  br label %38

35:                                               ; preds = %26
  %36 = load i32*, i32** %7, align 8
  %37 = call i32* @fz_new_path(i32* %36)
  store i32* %37, i32** %14, align 8
  br label %38

38:                                               ; preds = %35, %29
  br label %39

39:                                               ; preds = %38, %21
  %40 = load i32*, i32** %7, align 8
  %41 = load i32*, i32** %13, align 8
  %42 = load i32*, i32** %14, align 8
  %43 = load i32, i32* %15, align 4
  %44 = icmp eq i32 %43, 0
  %45 = zext i1 %44 to i32
  %46 = load i32, i32* %9, align 4
  %47 = load i32, i32* @fz_infinite_rect, align 4
  %48 = call i32 @fz_clip_path(i32* %40, i32* %41, i32* %42, i32 %45, i32 %46, i32 %47)
  %49 = load i32*, i32** %7, align 8
  %50 = load i32*, i32** %14, align 8
  %51 = call i32 @fz_drop_path(i32* %49, i32* %50)
  ret void
}

declare dso_local i32* @xps_parse_abbreviated_geometry(i32*, %struct.TYPE_5__*, i8*, i32*) #1

declare dso_local i32* @xps_parse_path_geometry(i32*, %struct.TYPE_5__*, i32*, i32*, i32, i32*) #1

declare dso_local i32* @fz_new_path(i32*) #1

declare dso_local i32 @fz_clip_path(i32*, i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @fz_drop_path(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
